# serializer version: 1
# name: test_terminal_failure_sequence
  dict({
    'posts': list([
      dict({
        'blocks': list([
          dict({
            'text': dict({
              'text': '*Working on it…*',
              'type': 'mrkdwn',
            }),
            'type': 'section',
          }),
          dict({
            'type': 'divider',
          }),
          dict({
            'elements': list([
              dict({
                'action_id': 'cancel_turn',
                'style': 'danger',
                'text': dict({
                  'text': 'Stop',
                  'type': 'plain_text',
                }),
                'type': 'button',
                'value': '<turn-key>',
              }),
            ]),
            'type': 'actions',
          }),
          dict({
            'elements': list([
              dict({
                'text': '0s',
                'type': 'mrkdwn',
              }),
            ]),
            'type': 'context',
          }),
        ]),
        'text': 'Working on it…',
      }),
    ]),
    'updates': list([
      dict({
        'blocks': list([
          dict({
            'text': dict({
              'text': '*Working on it…*',
              'type': 'mrkdwn',
            }),
            'type': 'section',
          }),
          dict({
            'type': 'divider',
          }),
          dict({
            'elements': list([
              dict({
                'action_id': 'cancel_turn',
                'style': 'danger',
                'text': dict({
                  'text': 'Stop',
                  'type': 'plain_text',
                }),
                'type': 'button',
                'value': '<turn-key>',
              }),
            ]),
            'type': 'actions',
          }),
          dict({
            'elements': list([
              dict({
                'text': '12s',
                'type': 'mrkdwn',
              }),
            ]),
            'type': 'context',
          }),
        ]),
        'text': 'Working on it…',
      }),
      dict({
        'blocks': list([
          dict({
            'text': dict({
              'text': 'Something went wrong.',
              'type': 'mrkdwn',
            }),
            'type': 'section',
          }),
          dict({
            'text': dict({
              'text': '@mention Daimon to try again.',
              'type': 'mrkdwn',
            }),
            'type': 'section',
          }),
          dict({
            'elements': list([
              dict({
                'text': 'Ref 000000',
                'type': 'mrkdwn',
              }),
            ]),
            'type': 'context',
          }),
          dict({
            'type': 'divider',
          }),
          dict({
            'elements': list([
              dict({
                'text': 'Atlas\u2003\u200312s\u2003\u2003$0.003 used',
                'type': 'mrkdwn',
              }),
            ]),
            'type': 'context',
          }),
        ]),
        'text': 'Something went wrong.\\n\\n@mention Daimon to try again.\\n\\nRef 000000',
      }),
    ]),
  })
# ---
# name: test_thinking_tool_then_success_sequence
  dict({
    'posts': list([
      dict({
        'blocks': list([
          dict({
            'text': dict({
              'text': '*Working on it…*',
              'type': 'mrkdwn',
            }),
            'type': 'section',
          }),
          dict({
            'type': 'divider',
          }),
          dict({
            'elements': list([
              dict({
                'action_id': 'cancel_turn',
                'style': 'danger',
                'text': dict({
                  'text': 'Stop',
                  'type': 'plain_text',
                }),
                'type': 'button',
                'value': '<turn-key>',
              }),
            ]),
            'type': 'actions',
          }),
          dict({
            'elements': list([
              dict({
                'text': '0s',
                'type': 'mrkdwn',
              }),
            ]),
            'type': 'context',
          }),
        ]),
        'text': 'Working on it…',
      }),
    ]),
    'updates': list([
      dict({
        'blocks': list([
          dict({
            'text': dict({
              'text': '*Working on it…*',
              'type': 'mrkdwn',
            }),
            'type': 'section',
          }),
          dict({
            'elements': list([
              dict({
                'text': '''
                  *Details*
                  `🖋️ Running a command`
                ''',
                'type': 'mrkdwn',
              }),
            ]),
            'type': 'context',
          }),
          dict({
            'type': 'divider',
          }),
          dict({
            'elements': list([
              dict({
                'action_id': 'cancel_turn',
                'style': 'danger',
                'text': dict({
                  'text': 'Stop',
                  'type': 'plain_text',
                }),
                'type': 'button',
                'value': '<turn-key>',
              }),
            ]),
            'type': 'actions',
          }),
          dict({
            'elements': list([
              dict({
                'text': '6s',
                'type': 'mrkdwn',
              }),
            ]),
            'type': 'context',
          }),
        ]),
        'text': 'Working on it…',
      }),
      dict({
        'blocks': list([
          dict({
            'text': 'Here is the answer.',
            'type': 'markdown',
          }),
          dict({
            'elements': list([
              dict({
                'text': 'Atlas\u2003\u200316s\u2003\u2003$0.008 used',
                'type': 'mrkdwn',
              }),
            ]),
            'type': 'context',
          }),
          dict({
            'block_id': 'feedback_vote',
            'elements': list([
              dict({
                'action_id': 'feedback_vote:up',
                'text': dict({
                  'text': '👍',
                  'type': 'plain_text',
                }),
                'type': 'button',
              }),
              dict({
                'action_id': 'feedback_vote:down',
                'text': dict({
                  'text': '👎',
                  'type': 'plain_text',
                }),
                'type': 'button',
              }),
            ]),
            'type': 'actions',
          }),
        ]),
        'text': 'Here is the answer.',
      }),
    ]),
  })
# ---
